Closed
Bug 199492
Opened 22 years ago
Closed 22 years ago
crash while submitting form on www.sony.com [@ nsHttpConnection::CloseTransaction] [@ nsHttpConnection::Close] [@ nsHttpConnectionMgr::nsConnectionHandle::~nsConnectionHandle] [@ nsHttpTransaction::HandleContent] [@ 0x3d888889] [@ nsHttpConnection::Re...
Categories
(Core :: Networking: HTTP, defect, P1)
Core
Networking: HTTP
Tracking
()
VERIFIED
FIXED
mozilla1.4alpha
People
(Reporter: darin.moz, Assigned: darin.moz)
References
Details
(Keywords: crash, regression, topcrash)
Crash Data
Attachments
(1 file)
|
1.74 KB,
patch
|
alecf
:
superreview+
dbaron
:
approval1.4a+
|
Details | Diff | Splinter Review |
there's a bug in the cancelation logic in the HTTP code that is triggered more
easily over a slow connection. on www.sony.com, if you enter a search term and
press enter before the page fully loads, chances are good that the browser will
crash. i've been able to repro this easily under linux w/ a trunk build from
yesterday just by adding some PR_Sleep's after each call to PR_Read/PR_Write on
the socket thread.
| Assignee | ||
Updated•22 years ago
|
Severity: normal → blocker
Status: NEW → ASSIGNED
Flags: blocking1.4a?
Keywords: crash
Priority: -- → P1
Target Milestone: --- → mozilla1.4alpha
| Assignee | ||
Comment 1•22 years ago
|
||
this is a regression from the NTLM SSPI patch... the fix is very trivial. can't
believe i overlooked this! :-(
| Assignee | ||
Comment 2•22 years ago
|
||
| Assignee | ||
Comment 3•22 years ago
|
||
Comment on attachment 118669 [details] [diff] [review]
v1 patch
alec:
turns out i should not try to clear the "old" transaction's reference to the
connection because it could still be in the middle of accessing it on a
background thread. instead, we should let the transaction release the
connection as it normally would when the transaction gets destroyed.
Attachment #118669 -
Flags: superreview?(alecf)
Comment 4•22 years ago
|
||
Comment on attachment 118669 [details] [diff] [review]
v1 patch
sr=alecf
Attachment #118669 -
Flags: superreview?(alecf) → superreview+
| Assignee | ||
Comment 5•22 years ago
|
||
Comment on attachment 118669 [details] [diff] [review]
v1 patch
seeking drivers approval for this simple topcrash fix. we don't want to ship
1.4a with this bug!!
this bug was a f**kup on my part, a regression from the NTLM patch that landed
two days ago. the code being removed was added for NTLM support, but i realize
now that it isn't even needed for that. things will be cleaned up
automatically, and in the right order, with proper thread synchronization (just
as before my NTLM patch) if i just let the transaction object release its
reference to the connection on its own.
alecf knows this code because we sat down and went over it during the NTLM
review, so it's really good to have his review on this. dougt also knows this
code well, but he is on vacation. i'm not sure who to get an r= from... i
think it would just be token at best.
please approve this patch. thx!
Attachment #118669 -
Flags: approval1.4a?
Attachment #118669 -
Flags: approval1.4a? → approval1.4a+
Comment 6•22 years ago
|
||
I'll + this for blocking 1.4. I've hit the crash several times in the last day
or so...
Flags: blocking1.4a? → blocking1.4a+
| Assignee | ||
Comment 7•22 years ago
|
||
fixed-on-trunk =)
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 8•22 years ago
|
||
*** Bug 199500 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 9•22 years ago
|
||
*** Bug 199458 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 10•22 years ago
|
||
*** Bug 199436 has been marked as a duplicate of this bug. ***
Comment 11•22 years ago
|
||
Adding topcrash keyword for tracking.
Keywords: regression,
topcrash
Summary: crash while submitting form on www.sony.com [@nsHttpConnection::CloseTransaction] → crash while submitting form on www.sony.com [@ nsHttpConnection::CloseTransaction]
Comment 12•22 years ago
|
||
*** Bug 199572 has been marked as a duplicate of this bug. ***
Comment 13•22 years ago
|
||
Is this related to Talkback not launching after the crash on MachO build
2003032609? Each time that build of the browser crashed, talkback did not launch.
| Assignee | ||
Comment 14•22 years ago
|
||
kguru: i doubt it.
Comment 15•22 years ago
|
||
*** Bug 199605 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 16•22 years ago
|
||
*** Bug 199549 has been marked as a duplicate of this bug. ***
Comment 17•22 years ago
|
||
Adding stack signatures from duped bugs into summary for tracking.
Summary: crash while submitting form on www.sony.com [@ nsHttpConnection::CloseTransaction] → crash while submitting form on www.sony.com [@ nsHttpConnection::CloseTransaction] [@ nsHttpConnection::Close] [@ nsHttpConnectionMgr::nsConnectionHandle::~nsConnectionHandle]
Comment 18•22 years ago
|
||
*** Bug 199533 has been marked as a duplicate of this bug. ***
Comment 19•22 years ago
|
||
Adding [@ nsHttpTransaction::HandleContent] [@ 0x3d888889] [@
nsHttpConnection::Release] to summary since those were also stack signatures
showing up in 3/25 - 3/27 MozillaTrunk builds.
No crashes since 3/17. Verifying fixed.
Status: RESOLVED → VERIFIED
Summary: crash while submitting form on www.sony.com [@ nsHttpConnection::CloseTransaction] [@ nsHttpConnection::Close] [@ nsHttpConnectionMgr::nsConnectionHandle::~nsConnectionHandle] → nsHttpConnection::Release] crash while submitting form on www.sony.com [@ nsHttpConnection::CloseTransaction] [@ nsHttpConnection::Close] [@ nsHttpConnectionMgr::nsConnectionHandle::~nsConnectionHandle] [@ nsHttpTransaction::HandleContent] [@ 0x3d888889]…
Comment 20•22 years ago
|
||
*** Bug 199466 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 21•18 years ago
|
||
The original summary for this bug was longer than 255 characters, and so it was truncated when Bugzilla was upgraded. The original summary was:
crash while submitting form on www.sony.com [@ nsHttpConnection::CloseTransaction] [@ nsHttpConnection::Close] [@ nsHttpConnectionMgr::nsConnectionHandle::~nsConnectionHandle] [@ nsHttpTransaction::HandleContent] [@ 0x3d888889] [@ nsHttpConnection::Release]
Updated•14 years ago
|
Crash Signature: [@ nsHttpConnection::CloseTransaction]
[@ nsHttpConnection::Close]
[@ nsHttpConnectionMgr::nsConnectionHandle::~nsConnectionHandle]
[@ nsHttpTransaction::HandleContent]
[@ 0x3d888889]
You need to log in
before you can comment on or make changes to this bug.
Description
•