fixes topcrash bug 199492 "crash while submitting form on www.sony.com [@nsHttpConnection::CloseTransaction]" r+sr=alecf a=dbaron